<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SmartHome</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_item">ItemActivity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_scene">Scence</string>
    <string name="title_activity_area">Area</string>
    <string name="keepPassword">Remember</string>
    <string name="autoLogin">Auto</string>
    <string name="logout">Logout</string>
    <string name="areaItemImageDes">It\'s an image.</string>
    <string name="title_activity_internet_image">InternetImageActivity</string>
    <string name="title_activity_category">CategoryActivity</string>
    <string name="itemStatusImage">点击切换状态</string>
    <string name="btnCancel">取消</string>
    <string name="loginBtn">登录按钮</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="scene">场景</string>
    <string name="area">区域</string>
    <string name="device">设备</string>
    <string name="monitor">监控</string>
    <string name="system">系统</string>
    <string name="more">更多</string>

</resources>
